# voting_predictor

./: .gitignore  LICENSE  README.md  acs5.py  constants.py  helpers.py  model.py  plans.py  predictor.ipynb  pyproject.toml  setup.py  transformers.py  voting.ipynb
old/: acs5.py  constants.py  crosswalks.py  elections.py  helpers.py  plans.py  shapes.py  transformers.py
voting_predictor/: __init__.py  constants  constants.py  constants_backup.py  main.py  test.py
voting_predictor/backup/: main.py  main2.py
