[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "voting_predictor"
dynamic = ["version"]
description = "Commonly used helpers"
dependencies = ["drscook_helpers@git+https://github.com/drscook/helpers"]

[tool.hatch.version]
path = "voting_predictor/__about__.py"
