[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "voting_predictor"
dynamic = ["version"]
description = "Commonly used helpers"
dependencies = ["helpers@git+https://github.com/drscook/helpers", 'census', 'us', 'geopandas', 'shapely', 'mechanicalsoup']

[tool.hatch.version]
path = "voting_predictor/__about__.py"
